# Thornado

./: .env  .env.example  .gitignore  HOME_LOCK.md  README.md  THORNADO — Product Roadmap 31e5da2a08d3803ebfd3e637ec6cbe04.md  dev-runner.js  docker-compose.yml  fix_theme.js  package-lock.json  package.json  portfolio.html
.home-anchor/: manifest.json
.home-anchor/snapshot/client/src/: styles.css
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/patches/: @nadohq+shared+0.4.0.patch
client/src/: App.jsx  main.jsx  styles.css  wagmi.config.js
client/src/assets/: aaa.jfif
client/src/components/: BorderGlow.jsx  ElectricButton.jsx  GooeyNav.jsx  Lightning.jsx  LightningCursor.jsx  LiveBtcChart.jsx  Navbar.jsx  NetworkToggle.jsx  ScrambledText.jsx  ScrollReveal.jsx  SolidBlock.jsx  SplitTextMessage.jsx  SplitTextScroll.jsx  StormBackdrop.jsx  TinyChart.jsx
client/src/components/portfolio/: MarketCommandCenterModal.jsx  NadoDepositWithdrawModal.jsx  NadoPortfolioView.jsx  NadoPositionsTable.jsx  NadoTransferModal.jsx  PnlCurveChart.jsx  PortfolioAvatar.jsx  PortfolioBalances.jsx  PortfolioChartPanel.jsx  PortfolioHeader.jsx  PortfolioOrders.jsx  PortfolioPnl.jsx  PortfolioPositions.jsx  PortfolioRisk.jsx  PortfolioTabBar.jsx  PortfolioTrades.jsx  Web3TokenIcon.jsx
client/src/context/: NadoLinkedSignerContext.jsx  NadoNetworkContext.jsx
client/src/hooks/: usePortfolioData.js  useSession.js
client/src/lib/: accountPreload.js  erc20TokenSymbols.js  executionGateway.js  explorerTokenIcon.js  fetchTimeout.js  formatUserFacingError.js  nadoLinkedSigner.js  nadoPerpBaseToken.js  nadoSpotCollateral.js  nadoTokenMedia.js  onChainTokenLogo.js  portfolioAdapters.js  siweAuth.js  tokenIconRemote.js  tokenLogoUrls.js
client/src/pages/: Account.jsx  Landing.jsx  Terminal.jsx
client/src/utils/: getScrollContainer.js
docs/: AUTH.md  CHART_GATEWAY.md  EXECUTION_GATEWAY.md  MARKETS_GATEWAY.md
gateway/: Dockerfile  avatar.go  execution_proxy.go  go.mod  go.sum  main.go  portfolio_proxy.go
gateway/chart/: Cargo.toml  Dockerfile
gateway/chart/src/: config.rs  main.rs  market.rs  protocol.rs  store.rs
gateway/execution/: Cargo.toml  Dockerfile
gateway/execution/src/: config.rs  main.rs
gateway/markets/: Cargo.toml  Dockerfile
gateway/markets/src/: config.rs  main.rs  protocol.rs  service.rs
gateway/orderbook/: Cargo.toml
gateway/orderbook/src/: config.rs  main.rs  market.rs  orderbook_state.rs  protocol.rs
gateway/portfolio/: Cargo.toml  Dockerfile
gateway/portfolio/src/: config.rs  main.rs  protocol.rs
nado-rust-sdk/: Cargo.toml  README.md
nado-rust-sdk/examples/: subscriptions_high_level.rs
nado-rust-sdk/src/: lib.rs  subscriptions.rs
scripts/: home-anchor.js
server/: index.js  package-lock.json  package.json
(+4 files in other folders)
