[package]
name = "execution-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["http1", "json"] }
ethers-core = "2.0.14"
hex = "0.4.3"
nado-sdk = { path = "../../../nado-rust-sdk" }
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
