[package]
name = "markets-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["ws", "http1", "json"] }
futures-util = "0.3.31"
nado-sdk = { path = "../../../nado-rust-sdk" }
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
