[package]
name = "orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["ws", "http1", "json"] }
bytes = "1.10.1"
futures-util = "0.3.31"
nado-sdk = { path = "../../../nado-rust-sdk", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rustls = { version = "0.23.37", features = ["ring"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
ratchet_rs = { version = "1.2.1", features = ["deflate", "split"] }
tokio-rustls = "0.26.4"
tower-http = { version = "0.6.6", features = ["cors"] }
url = "2.5.7"
webpki-roots = "1.0.6"
